--- a/style.css
+++ b/style.css
@@ -110,6 +110,21 @@ text-transform: capitalize;
     border-radius: 30px;
     margin-right: 20px;
   }
+  .donate9 {
+      width: 70%;
+      height: 40px;
+      font-weight: 600;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    line-height: 24px;
+    letter-spacing: 0.05em;
+    text-transform: capitalize;
+    color: #072568;
+    border-color:#a9eb62;
+    background:#a9eb62;
+    border-radius: 30px;
+  }
   .donate2 {
       width: 30%;
       height: 48px;
@@ -127,6 +142,57 @@ text-transform: capitalize;
     margin-right: 20px;
   }
   .donate5 {
+      width: 40%;
+      height: 48px;
+      font-weight: 600;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    line-height: 24px;
+    letter-spacing: 0.05em;
+    text-transform: capitalize;
+    color: #ffffff;
+    border-color:#a9eb62;
+    background:#a9eb62;
+    border-radius: 10px;
+    align-items: center;
+    visibility: hidden;
+  }
+  .input-group .form-control {
+      width: 80%;
+      height: 30px;
+  }
+  .input-group {
+    float: left;
+    width: 20%;
+    padding-left: 65px;
+  }
+  .form {
+    width: 100%;
+    background-color: rgb(18, 112, 150);
+  }
+  .form h3 {
+    font-weight: normal;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-size: 20px;
+    line-height: 150%;
+    color: #ffffff;
+    text-align: center;
+    padding-top: 20px;
+  }
+  .form p {
+    font-weight: normal;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 150%;
+    color:rgb(65, 255, 255);
+    text-align: center;
+    padding-top: 50px;
+    padding-bottom: 20px;
+  }
+  .donate8 {
       width: 30%;
       height: 48px;
       font-weight: 600;
@@ -156,6 +222,24 @@ text-transform: capitalize;
     color: #ffffff;
     border-color:#a9eb62;
     background:#a9eb62;
+    border-radius: 10px;
+    align-items: center;
+    margin-left: 35px;
+    margin-top: 40px;
+  }
+  .donate7 {
+      width: 30%;
+      height: 48px;
+      font-weight: 600;
+    font-size: 16px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    line-height: 24px;
+    letter-spacing: 0.05em;
+    text-transform: capitalize;
+    color: #ffffff;
+    border-color:#a9eb62;
+    background:#51811e;
     border-radius: 10px;
     align-items: center;
     margin-left: 35px;
@@ -466,6 +550,10 @@ margin-left: 35px;
 }
 #pic {
     width: 80%;
+}
+#pic1 {
+    width: 80%;
+    visibility: hidden;
 }
 .img1 {
     float: left;
