--- a/style.css
+++ b/style.css
@@ -422,6 +422,29 @@ text-align: center;
 color: #000000;
 margin: 0px;
 }
+.health0a {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    font-weight: bold;
+font-size: 30px;
+line-height: 72px;
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+text-align: center;
+color: #000000;
+margin: 0px;
+}
+.health5 p {
+    font-weight: normal;
+font-size: 16px;
+font-family: 'Poppins', sans-serif;
+font-style: normal;
+line-height: 24px;
+color: rgb(155, 155, 155);
+width: 90%;
+padding-left: 20px;
+text-align: center;
+}
 .container1 {
     width: 100%;
 }
@@ -989,6 +1012,122 @@ width: 90%;
     font-size: 20px;
     line-height: 30px;
     color: #ffffff;
+    }
+    .health0 {
+        padding-top: 50px;
+        padding-bottom: 50px;
+        font-weight: bold;
+    font-size: 30px;
+    line-height: 35px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    text-align: center;
+    color: #000000;
+    }
+    .box3{
+       text-align: left;
+       width: 100%;
+       padding-left: 20px;
+     }
+     .box2{
+        text-align: left;
+        width: 100%;
+        padding-left: 20px;
+      }
+    .health0a {
+        padding-top: 50px;
+        padding-bottom: 50px;
+        padding-left: 13px;
+        font-weight: bold;
+    font-size: 30px;
+    line-height: 35px;
+    font-family: 'Poppins', sans-serif;
+    font-style: normal;
+    text-align: center;
+    color: #000000;
+    }
+    .donate8 {
+        width: 30%;
+        height: 48px;
+        font-weight: 600;
+      font-size: 16px;
+      font-family: 'Poppins', sans-serif;
+      font-style: normal;
+      line-height: 24px;
+      letter-spacing: 0.05em;
+      text-transform: capitalize;
+      color: #ffffff;
+      border-color:#a9eb62;
+      background:#a9eb62;
+      border-radius: 10px;
+      align-items: center;
+      display: none;
+    }
+    .box5 {
+        text-align: center;
+        width: 100%;
+        padding-left: 0px;
+    }
+    .donate6 {
+        width: 90%;
+        height: 48px;
+        font-weight: 600;
+      font-size: 16px;
+      font-family: 'Poppins', sans-serif;
+      font-style: normal;
+      line-height: 24px;
+      letter-spacing: 0.05em;
+      text-transform: capitalize;
+      color: #ffffff;
+      border-color:#a9eb62;
+      background: black;
+      border-radius: 10px;
+      margin-left: 20px;
+      margin-bottom: 10px;
+    }
+    .donate3 {
+        width: 90%;
+        height: 48px;
+        font-weight: 600;
+      font-size: 16px;
+      font-family: 'Poppins', sans-serif;
+      font-style: normal;
+      line-height: 24px;
+      letter-spacing: 0.05em;
+      text-transform: capitalize;
+      color: #ffffff;
+      border-color:#a9eb62;
+      background:#a9eb62;
+      border-radius: 10px;
+      align-items: center;
+      margin-left: 35px;
+      margin-top: 40px;
+    }
+  .donate5 {
+    width: 30%;
+    height: 48px;
+    font-weight: 600;
+  font-size: 16px;
+  font-family: 'Poppins', sans-serif;
+  font-style: normal;
+  line-height: 24px;
+  letter-spacing: 0.05em;
+  text-transform: capitalize;
+  color: #ffffff;
+  border-color:#a9eb62;
+  background:#a9eb62;
+  border-radius: 10px;
+  align-items: center;
+  display: none;
+}
+    .health41 {
+        background: rgb(255, 255, 255);
+        background-image: url(images/background.svg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-blend-mode: darken, normal;
+    height: 1050px;
+    width: 100%;
     }
     .donate2 {
         width: 30%;
